# credit-default-prediction

./: .gitignore  Makefile  README.md  TODO.md  dvc.yaml  params.yaml  pre-push.sh  pyproject.toml  setup.cfg
.dvc/: config
.githooks/: pre-push
.github/actions/setup-system-deps/: action.yml
.github/workflows/: cml.yaml  code_quality.yaml  tests.yaml
credit_default_prediction/: cross_validation.py  data_preprocessing.py  dataset.py  evaluate.py  evaluation.py  feature_engineering.py  hyperparams.py  hyperparams_tuning.py  inference.py  params.py  params_tuning.py  preprocess.py  preprocess_data.py  preprocessing.py  preserve_df.py  split.py  train.py  training.py  validate.py
credit_default_prediction/experiment_tracking/: dvc_experiment_tracker.py  experiment_tracker.py
credit_default_prediction/tools/: hyperparams_tuning.py  params.py
data/clean/: .gitignore  train.csv
data/feature_store/: train.csv
data/raw/: .gitignore  cr_loan2.csv.dvc  test.csv  train.csv
dvclive/: metrics.json  params.yaml
dvclive/plots/custom/: confusion_matrix.json  feature_importance.json
dvclive/plots/metrics/cross_validation/: avg_accuracy.tsv  avg_precision.tsv  avg_recall.tsv
dvclive/plots/metrics/test/: ROC_AUC.tsv  accuracy.tsv  precision.tsv  recall.tsv
dvclive/plots/sklearn/: roc.json
experiment_tracking/: dvc_experiment_tracker.py  experiment_tracker.py
scripts/: engineer_features.py  evaluate.py  preprocess_data.py  split.py  train.py  validate.py
tests/: test_dataset.py  test_evaluate.py  test_evaluation.py  test_feature_engineering.py  test_params.py  test_preprocess.py  test_preprocess_data.py  test_preprocessing.py  test_split.py  test_train.py  test_training.py
tests/integration/: test_data_preprocessing_pipeline.py  test_feature_engineering_pipeine.py  test_feature_engineering_pipeline.py  test_preprocessing_pipeline.py  test_training.py
