[tool.poetry]
name = "credit-default-prediction"
version = "0.1.0"
description = "Predict whether a bank client will default a loan (1) or not (0)"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
preprocess = "credit_default_prediction.preprocess:main"
split = "credit_default_prediction.split:main"
train = "credit_default_prediction.train:main"
evaluate = "credit_default_prediction.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
dvc = "^3.54.1"
seaborn = "^0.13.2"
dvclive = "^3.48.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
