[tool.poetry]
name = "credit-default-prediction"
version = "0.1.0"
description = "Predict whether a bank client will default a loan (1) or not (0)"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
split = "scripts.split:main"
preprocess_data = "scripts.preprocess_data:main"
feature_engineering = "scripts.feature_engineering:main"
train = "scripts.train:main"
cross_validate = "scripts.validate:main"
evaluate = "scripts.evaluate:main"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
dvclive = "^3.48.5"
xgboost = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"
ipython = "^8.26.0"
pytest-mock = "^3.14.0"
pandas-stubs = "^2.2.3.241009"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12.20240917"
pytest-cov = "^6.0.0"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
